# SNN_DPE

./: .gitignore  Lorentz dataset.ipynb  MG.ipynb  README.md  lorenz_data.py  noise_vs_mse.ipynb  pyproject.toml  snn_dpe_iris_test.ipynb  snn_dpe_test.ipynb
.ipynb_checkpoints/: Lorentz dataset-checkpoint.ipynb
Datasets/MarkusThill-MGAB-60f6b17/: README.md
Images/: plot_noise_vs_MSE.m
Papers/hamming_distance/: HD_main.py  demo.ipynb  eons_eval.py  eons_eval_demo.ipynb  plot.ipynb  start.ipynb  start.py
demonstration/: 00_encoder.ipynb  01_read_iris.ipynb  02_network_creation.ipynb  03_running_network.ipynb  04_steady_state.ipynb  05_weight_update.ipynb  06_training_test.ipynb  07_saving_network.ipynb  08_dpe_into_snn.ipynb
demonstration/classification/: 00_encoder.ipynb  00_encoder.py  01_read_iris.ipynb  02_network_creation.ipynb  02_neuron_synapse.ipynb  02a_neuron_synapse.ipynb  02b_network_creation.ipynb  03_network_creation.ipynb  03_running_network.ipynb  04_running_network.ipynb  04_steady_state.ipynb  05_weight_update.ipynb  06_training_test.ipynb  07_saving_network.ipynb  08_dpe_into_snn.ipynb
demonstration/maze/: maze_gen.py  maze_runner.py
demonstration/timeseries_prediction/: Lorenz_drift_vs_mse.py  Lorenz_drift_vs_mse_STDP.py  Lorenz_intro.ipynb  Lorenz_noise_vs_mse.py  MG_drift_vs_mse.py  (+6 more)
snn_dpe/: __init__.py  encoder.py  neuron_synapse.py
src/: MG_v2.ipynb  MG_v3.ipynb  MG_v4.ipynb  absolute.json  big_train.py  encoder.py  iris_data_tools.py  network_tools.py  neuron_synapse.py  plotting_tools.py  setup.py  test_tools.py  training_tools.py
(+1106 files in other folders)
